tests/snapshots/snapshots__fixture_xxhash_level4.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# xxhash
     2→
     3→[![Go Reference](https://pkg.go.dev/badge/github.com/cespare/xxhash/v2.svg)](https://pkg.go.dev/github.com/cespare/xxhash/v2)
     4→[![Test](https://github.com/cespare/xxhash/actions/workflows/test.yml/badge.svg)](https://github.com/cespare/xxhash/actions/workflows/test.yml)
    33→## Compatibility
    34→
    35→This package is in a module and the latest code is in version 2 of the module.
    36→You need a version of Go with at least "minimal module compatibility" to use
    37→github.com/cespare/xxhash/v2:
    45→## Benchmarks
    46→
    47→Here are some quick benchmarks comparing the pure-Go and assembly
    48→implementations of Sum64.
    66→## Projects using this package
    67→
    68→- [InfluxDB](https://github.com/influxdata/influxdb)
    69→- [Prometheus](https://github.com/prometheus/prometheus)
    70→- [VictoriaMetrics](https://github.com/VictoriaMetrics/VictoriaMetrics)
    71→- [FreeCache](https://github.com/coocood/freecache)
    72→- [FastCache](https://github.com/VictoriaMetrics/fastcache)
    73→- [Ristretto](https://github.com/dgraph-io/ristretto)
    74→- [Badger](https://github.com/dgraph-io/badger)
dynamic/plugin.go
    14→const (
    15→	in   = "Call me Ishmael. Some years ago--never mind how long precisely-"
    16→	want = uint64(0x02a2e85470d6fd96)
    19→func TestSum(t *testing.T) {
    26→func TestDigest(t *testing.T) {
xxhash.go
    11→const (
    12→	prime1 uint64 = 11400714785074694791
    13→	prime2 uint64 = 14029467366897019727
    14→	prime3 uint64 = 1609587929392839161
    15→	prime4 uint64 = 9650029242287828579
    16→	prime5 uint64 = 2870177450012600261
    23→var primes = [...]uint64{prime1, prime2, prime3, prime4, prime5}
    25→// Digest implements hash.Hash64.
    26→//
    27→// Note that a zero-valued Digest is not ready to receive writes.
    28→// Call Reset or create a Digest using New before calling other methods.
    29→type Digest struct {
    39→// New creates a new Digest with a zero seed.
    40→func New() *Digest {
    44→// NewWithSeed creates a new Digest with the given seed.
    45→func NewWithSeed(seed uint64) *Digest {
    51→// Reset clears the Digest's state so that it can be reused.
    52→// It uses a seed value of zero.
    53→func (d *Digest) Reset() {
    57→// ResetWithSeed clears the Digest's state so that it can be reused.
    58→// It uses the given seed to initialize the state.
    59→func (d *Digest) ResetWithSeed(seed uint64) {
    68→// Size always returns 8 bytes.
    69→func (d *Digest) Size() int { return 8 }
    71→// BlockSize always returns 32 bytes.
    72→func (d *Digest) BlockSize() int { return 32 }
    74→// Write adds more data to d. It always returns len(b), nil.
    75→func (d *Digest) Write(b []byte) (n int, err error) {
   112→// Sum appends the current hash to b and returns the resulting slice.
   113→func (d *Digest) Sum(b []byte) []byte {
   128→// Sum64 returns the current hash.
   129→func (d *Digest) Sum64() uint64 {
   170→const (
   171→	magic         = "xxh\x06"
   172→	marshaledSize = len(magic) + 8*5 + 32
   175→// MarshalBinary implements the encoding.BinaryMarshaler interface.
   176→func (d *Digest) MarshalBinary() ([]byte, error) {
   189→// UnmarshalBinary implements the encoding.BinaryUnmarshaler interface.
   190→func (d *Digest) UnmarshalBinary(b []byte) error {
   208→func appendUint64(b []byte, x uint64) []byte {
   214→func consumeUint64(b []byte) ([]byte, uint64) {
   219→func u64(b []byte) uint64 { return binary.LittleEndian.Uint64(b) }
   220→func u32(b []byte) uint32 { return binary.LittleEndian.Uint32(b) }
   222→func round(acc, input uint64) uint64 {
   229→func mergeRound(acc, val uint64) uint64 {
   236→func rol1(x uint64) uint64  { return bits.RotateLeft64(x, 1) }
   237→func rol7(x uint64) uint64  { return bits.RotateLeft64(x, 7) }
   238→func rol11(x uint64) uint64 { return bits.RotateLeft64(x, 11) }
   239→func rol12(x uint64) uint64 { return bits.RotateLeft64(x, 12) }
   240→func rol18(x uint64) uint64 { return bits.RotateLeft64(x, 18) }
   241→func rol23(x uint64) uint64 { return bits.RotateLeft64(x, 23) }
   242→func rol27(x uint64) uint64 { return bits.RotateLeft64(x, 27) }
   243→func rol31(x uint64) uint64 { return bits.RotateLeft64(x, 31) }
xxhash_asm.go
     9→// Sum64 computes the 64-bit xxHash digest of b with a zero seed.
    10→//
    11→//go:noescape
    12→func Sum64(b []byte) uint64
    15→func writeBlocks(d *Digest, b []byte) int
xxhash_other.go
     6→// Sum64 computes the 64-bit xxHash digest of b with a zero seed.
     7→func Sum64(b []byte) uint64 {
    64→func writeBlocks(d *Digest, b []byte) int {
xxhash_safe.go
     8→// Sum64String computes the 64-bit xxHash digest of s with a zero seed.
     9→func Sum64String(s string) uint64 {
    13→// WriteString adds more data to d. It always returns len(s), nil.
    14→func (d *Digest) WriteString(s string) (n int, err error) {
xxhash_unsafe.go
    36→// Sum64String computes the 64-bit xxHash digest of s with a zero seed.
    37→// It may be faster than Sum64([]byte(s)) by avoiding a copy.
    38→func Sum64String(s string) uint64 {
    43→// WriteString adds more data to d. It always returns len(s), nil.
    44→// It may be faster than Write([]byte(s)) by avoiding a copy.
    45→func (d *Digest) WriteString(s string) (n int, err error) {
    55→type sliceHeader struct {
xxhsum/xxhsum.go
    11→func main() {
    34→func contains(ss []string, s string) bool {
    43→func printHash(r io.Reader, name string) {
