tests/snapshots/snapshots__fixture_xxhash_xxhsum_subdir.snap
---
source: tests/snapshots.rs
expression: output
---
xxhsum.go
    11→func main
    34→func contains
    43→func printHash
