tests/snapshots/snapshots__fixture_xxhash_xxhsum_subdir_level2.snap
---
source: tests/snapshots.rs
expression: output
---
xxhsum.go
    11→func main() {
    34→func contains(ss []string, s string) bool {
    43→func printHash(r io.Reader, name string) {
