tests/snapshots/snapshots__go_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.go
     7→type Token …
     8→	Kind TokenKind
     9→	Span Span
    10→}
    13→type TokenKind int
    21→// Visitor walks over tokens in a stream.
    22→type Visitor …
    28→func Process(input string) ([]Token, error) {
    35→type TokenParser …
    36→	tokens []Token
    37→	source string
    38→}
    41→func NewTokenParser[T any](source string) *TokenParser[T] {
    46→func (p *TokenParser[T]) Parse() []Token {
    53→type Span = [2]int
    55→const MaxTokens …
    57→var Version …
    60→func (t Token) String() string {
