tests/snapshots/snapshots__go_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.go
     7→type Token …
    13→type TokenKind …
    22→type Visitor …
    35→type TokenParser …
    53→type Span …
