tests/snapshots/snapshots__go_sample_level1.snap
---
source: tests/snapshots.rs
expression: output
---
sample.go
     7→type Token
    13→type TokenKind
    16→	Ident
    17→	Number
    18→	Symbol
    22→type Visitor
    28→func Process
    35→type TokenParser
    41→func NewTokenParser
    46→func (p *TokenParser[T]) Parse
    53→type Span
    55→const MaxTokens
    57→var Version
    60→func (t Token) String
